Fix Creation Bugs and Fix issue of non-working photo-api design
