# backend/src/main/resources/api/arstolpersteine-secured.openapi-spec.yml
@@ -457,8 +457,7 @@ paths:
           description: ID of Photo
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       security:
         - KeycloakAuth:
             - USER
@@ -467,9 +466,10 @@ paths:
         200:
           description: Return information when upload was successfully
           content:
-            application/json:
+            application/octet-stream:
               schema:
-                $ref: '#/components/schemas/PhotoDownloadDto'
+                type: string
+                format: binary
         404:
           description: Resource was not found with given Resource-URL
           content:
